proj0/tests/error/repeated.inp
* B BETA III III I CCAS
ASFS SDF